syntax = "proto3";
package nlp;

option php_namespace = "GrpcClient\\Nlp";
option php_metadata_namespace = "GrpcClient\\GPBMetadata";

message GenerateAllRequest {
    uint32 userId = 1;
}

//client streaming
message GenerateAllResponse{
    bool start = 1;
}


service NlpManager {
    rpc GenerateAll(GenerateAllRequest) returns (GenerateAllResponse) {}
}
